kubernetes/snatcher-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snatcher-client
spec:
  selector:
    app: snatcher-client
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: snatcher-gateway
spec:
  selector:
    app: snatcher-gateway
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: snatcher-shortner
spec:
  selector:
    app: snatcher-shortner
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: snatcher-tendies
spec:
  selector:
    app: snatcher-tendies
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: snatcher-digits
spec:
  selector:
    app: snatcher-digits
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snatcher-gateway-deployment
  labels:
    app: snatcher-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snatcher-gateway
  template:
    metadata:
      labels:
        app: snatcher-gateway
    spec:
      containers:
      - name: snatcher-gateway
        image: registry.digitalocean.com/snatcher/snatcher-gateway
        ports:
          - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snatcher-shortner-deployment
  labels:
    app: snatcher-shortner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snatcher-shortner
  template:
    metadata:
      labels:
        app: snatcher-shortner
    spec:
      containers:
      - name: snatcher-shortner
        image: registry.digitalocean.com/snatcher/snatcher-shortner
        ports:
          - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snatcher-tendies-deployment
  labels:
    app: snatcher-tendies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snatcher-tendies
  template:
    metadata:
      labels:
        app: snatcher-tendies
    spec:
      containers:
      - name: snatcher-tendies
        image: registry.digitalocean.com/snatcher/snatcher-tendies
        ports:
          - containerPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snatcher-client-deployment
  labels:
    app: snatcher-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snatcher-client
  template:
    metadata:
      labels:
        app: snatcher-client
    spec:
      containers:
      - name: snatcher-client
        image: registry.digitalocean.com/snatcher/snatcher-client
        ports:
          - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snatcher-digits-deployment
  labels:
    app: snatcher-digits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snatcher-digits
  template:
    metadata:
      labels:
        app: snatcher-digits
    spec:
      containers:
      - name: snatcher-digits
        image: registry.digitalocean.com/snatcher/snatcher-digits
        ports:
          - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snatcher-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: snatcher-staging
    cert-manager.io/cluster-issuer: snatcher-prod
spec:
  tls:
  - hosts:
      - snatcher.link
      - gateway.snatcher.link
      - cmprsd.link
      - minified.live
      - shrinkd.xyz
      - shrtnd.xyz
      - shrtnr.io
      - tinyd.live
    # secretName: snatcher-staging-tls
    secretName: snatcher-prod-tls
  rules:
    - host: "snatcher.link" # Capture Front-End Traffic
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snatcher-client
                port:
                  number: 80
    - host: "gateway.snatcher.link"
      http: # Send All Other Traffic to the Gateway to Handle
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snatcher-gateway
                port:
                  number: 80
    - host: "cmprsd.link"
      http: # Send All Other Traffic to the Gateway to Handle
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snatcher-gateway
                port:
                  number: 80
    - host: "minified.live"
      http: # Send All Other Traffic to the Gateway to Handle
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snatcher-gateway
                port:
                  number: 80
    - host: "shrinkd.xyz"
      http: # Send All Other Traffic to the Gateway to Handle
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snatcher-gateway
                port:
                  number: 80
    - host: "shrtnr.io"
      http: # Send All Other Traffic to the Gateway to Handle
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snatcher-gateway
                port:
                  number: 80
    - host: "shrtnd.xyz"
      http: # Send All Other Traffic to the Gateway to Handle
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snatcher-gateway
                port:
                  number: 80
    - host: "tinyd.live"
      http: # Send All Other Traffic to the Gateway to Handle
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snatcher-gateway
                port:
                  number: 80
